--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
           <a href="#" class="topic--white ts--btn">{{topic}}</a>
         </div>
         <div class="cover__headline">
-          <h1 href="#" class="serif hover--txt">{{title}}</h1>
+          <h1 class="serif hover--txt">{{title}}</h1>
         </div>
       </div>
     </template>
@@ -226,7 +226,7 @@
                     <a href="#" class="topic ts--btn">{{topic}}</a>
                   </div>
                   <h4 class="title-row__txt hover--txt serif">{{title}}</h4>
-                  <p class="author-row ts--body-s text-gray row gap--s">
+                  <p class="author-row ts--body-s tc--gray row gap--s">
                     By
                     <span class="author__name">{{author.name}}</span>
                   </p>
