list sort filtering

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
         <div class="navbar__menu row gap--l tc--white">
           <button
             class="menu__item ts--body"
-            onclick="navigateTo('/insights/1'); return false;"
+            onclick="navigateTo(`/insights`); return false;"
           >
             Insights
           </button>
