--- a/insights.html
+++ b/insights.html
@@ -6,8 +6,126 @@
     <title>insight</title>
   </head>
   <body>
-    <section>
-      <p>insight list page</p>
-    </section>
+    <div class="insights__content row">
+      <section id="insights" class="container--m">
+        <div class="sidebar row between v-center">
+          <div class="filter row v-center">
+            <button class="filter__left">
+              <i class="fa-solid fa-chevron-left"></i>
+            </button>
+            <ul class="filter__list row gap--m">
+              <template id="filterTemplate">
+                {{#each data}}
+                <li class="filter__item">
+                  <button class="filter__button">{{topic}}</button>
+                </li>
+                {{/each}}
+              </template>
+            </ul>
+            <button class="filter__right">
+              <i class="fa-solid fa-chevron-right"></i>
+            </button>
+          </div>
+          <button class="sort">
+            date <span class="sort__arrow">&darr;</span>
+          </button>
+        </div>
+        <ul class="insights__list col gap--l">
+          <template id="insightsItemThumbnail">
+            {{#each data}}
+            <li class="insights__item row gap--m">
+              <div class="insights__img section__img img--ratio-64">
+                <img src="{{thumbnail}}" />
+                <div class="component-bookmark-add"></div>
+              </div>
+              <div class="insights__txt col gap--s v-center">
+                <div class="insights__topic">
+                  <button class="topic">{{topic}}</button>
+                </div>
+                <h3
+                  class="insights__title serif hover--txt"
+                  onclick="navigateTo(`/insights/{{id}}`); return false;"
+                >
+                  {{title}}
+                </h3>
+                <p class="insights__summary">{{summary}}</p>
+                <div class="time-row row gap--s v-center">
+                  <p class="icon__time-wrapper">
+                    <i class="icon__time fa-regular fa-clock"></i>
+                  </p>
+                  <p class="createdAt">{{createdAt}}</p>
+                  <p class="separator">·</p>
+                  <p class="ttr__box"><span class="ttr">{{ttr}}</span> read</p>
+                </div>
+                <div class="author-row--icon v-center row gap--s">
+                  <img src="{{author.avatar}}" class="author__avatar" />
+                  <p class="author__name">{{author.name}}</p>
+                </div>
+              </div>
+            </li>
+            {{/each}}
+          </template>
+        </ul>
+      </section>
+      <section id="side" class="container--m col gap--xl">
+        <div class="side__trending col gap--m">
+          <div class="section__title-wrapper row between">
+            <p class="section__title">What's Trending</p>
+          </div>
+          <ul class="insights__trending col gap--m">
+            <template id="trendingListTemplate">
+              {{#each data}}
+              <li class="trending__item row gap--s">
+                <div class="row v-center">
+                  <div class="trending__txt col gap--s">
+                    <p
+                      class="title-row__txt tc--gray hover--txt bold"
+                      onclick="navigateTo(`/insights/{{id}}`); return false;"
+                    >
+                      {{title}}
+                    </p>
+                    <p class="author-row ts--body-s tc--gray row gap--s">
+                      By
+                      <span class="author__name">{{author.name}}</span>
+                    </p>
+                  </div>
+                  <div
+                    class="trendings__img section__img img--ratio-64"
+                    onclick="navigateTo(`/insights/{{id}}`); return false;"
+                  >
+                    <img src="{{thumbnail}}" />
+                  </div>
+                </div>
+              </li>
+              {{/each}}
+            </template>
+          </ul>
+          <div class="component-viewAll row end"></div>
+        </div>
+        <div class="side__inspirations col gap--m">
+          <div class="section__title-wrapper row between">
+            <p class="section__title">inspirations</p>
+            <button
+              id="shuffleImage"
+              class="icon__wrapper ts--body hover--lighter"
+            >
+              <i class="fa-solid fa-shuffle"></i>
+            </button>
+          </div>
+          <ul class="inspirations__list">
+            <template id="inspirationsTemplate">
+              {{#each data}}
+              <li
+                class="inspirations__item section__img"
+                onclick="navigateTo(`/insights/{{id}}`); return false;"
+              >
+                <img class="inspirations__img" src="{{thumbnail}}" />
+              </li>
+              {{/each}}
+            </template>
+          </ul>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
