list page connected

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
       </button>
     </template>
 
+    <template id="viewAllSavedTemplate">
+      <button class="viewAll row gap--s hover--lighter">
+        <p class="viewAll__txt ts--btn">view all</p>
+        <i class="fa-solid fa-chevron-right ts--body-s"></i>
+      </button>
+    </template>
+
     <template id="newsletterTemplate">
       <div class="col gap--m">
         <p class="newsletter__description">
