--- a/main.html
+++ b/main.html
@@ -130,7 +130,9 @@
               </template>
             </ul>
 
-            <div class="editorsPick__viewAll component-viewAll row end"></div>
+            <div
+              class="editorsPick__viewAll component-viewAll-insights row end"
+            ></div>
           </div>
         </div>
       </section>
@@ -205,7 +207,7 @@
       <section id="trending" class="col gap--m">
         <div class="section__title-wrapper row between">
           <p class="section__title">What's Trending</p>
-          <div class="component-viewAll"></div>
+          <div class="component-viewAll-insights"></div>
         </div>
         <div class="section__content row gap--m">
           <div class="trending__main col gap--m">
@@ -381,7 +383,7 @@
     <section id="savedForLater" class="col gap--m container--m">
       <div class="section__title-wrapper row between">
         <p class="section__title">Saved For Later</p>
-        <div class="component-viewAllSaved"></div>
+        <div class="component-viewAll-saved"></div>
       </div>
       <div class="seciton__content">
         <ul class="savedForLater__list row gap--m">
@@ -447,7 +449,7 @@
       <div id="latest" class="aside__box col gap--m container--s">
         <div class="section__title-wrapper row between">
           <p class="section__title">the latest</p>
-          <div class="component-viewAll"></div>
+          <div class="component-viewAll-insights"></div>
         </div>
         <ul class="latest__list col gap--m">
           <template id="latestTemplate">
@@ -516,7 +518,7 @@
               {{/each}}
             </script>
           </ul>
-          <div class="component-viewAll row end"></div>
+          <div class="component-viewAll-authors row end"></div>
         </div>
 
         <!-- Ad -->
